# gptengage

./: .gitignore  .gitmessage.txt  .trufflehog_exclude.txt  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SYSTEM_OVERVIEW.md  allow.example.toml  allow.json  deny.example.toml  deny.toml  install.sh
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-rust.yml  ci.yml  dependabot-auto-approve.yml  release.yml  secrets-scan.yml  security-audit.yml
docs/: COMMANDS.md  EXAMPLES.md
scripts/: check_secrets.py  install_git_hooks.sh
scripts/git-hooks/: commit-msg  pre-commit  pre-push
src/: cli.rs  lib.rs  main.rs
src/commands/: debate.rs  generate_agents.rs  ideate.rs  invoke.rs  mod.rs  plugin.rs  session.rs  status.rs  template.rs
src/config/: mod.rs
src/invokers/: base.rs  claude.rs  codex.rs  gemini.rs  mod.rs  plugin.rs
src/orchestrator/: debate.rs  ideation.rs  mod.rs  synthesizer.rs
src/plugins/: mod.rs
src/session/: mod.rs
src/templates/: builtin.rs  mod.rs
src/utils/: colors.rs  formatter.rs  mod.rs  output_filter.rs  pager.rs  stdin.rs  tree_renderer.rs
